syntax = "proto3";

package tradingdb;

message Candle {
    string code = 1;
    string name = 2;
    int64 open = 3;
    int64 close = 4;
    int64 high = 5;
    int64 low = 6;
    int64 curTime = 7;
    int64 volume = 8;
    int64 openInterest = 9;
}

message CandleChunk {
    string code = 1;
    string name = 2;
    int64 startTime = 3;
    int64 endTime = 4;
    string keyID = 5;
    repeated Candle candles = 6;
}

message CandleChunkList {
    repeated string keyIDs = 1;
}

enum ORDERTYPE {
    INVALIDTYPE = 0;
    LIMIT = 1;
}

enum TRADINGSIDE {
    INVALID_TRADINGSIDE = 0;
    TRADING_BUY = 1;
    TRADING_SELL = 2;
}

message Order {
    string orderID = 1;
    ORDERTYPE orderType = 2;
    TRADINGSIDE side = 3;
    int64 price = 4;
    int64 volume = 5;
    int64 startTime = 6;

    int64 avgPrice = 7;
    int64 doneVolume = 8;
    int64 doneTime = 9;
}

message Trade {
    string tradeID = 1;
    string orderID = 2;
    int64 curTime = 3;
    int64 price = 4;
    int64 volume = 5;
}

message TradingData {
    string keyID = 1;
    repeated Order orders = 2;
    repeated Trade trades = 3;
}

message MarketTradeData {
    int64 msTime = 1;
    int64 price = 2;
    int64 volume = 3;
    TRADINGSIDE side = 4;
    string marketTradeID = 5;
}

message MarketTradeDataList {
    repeated MarketTradeData trades = 1;
}

message MarketContractData {
    string categoryCode = 1;
    string contractCode = 2;
    int64 beginTime = 3;
    int64 endTime = 4;
}

message MarketCategoryData {
    string categoryCode = 1;
    repeated MarketContractData contracts = 2;
}

message MarketData {
    string marketCode = 1;
    repeated MarketCategoryData categories = 2;
}